--- a/solstice/index.html
+++ b/solstice/index.html
@@ -43,7 +43,7 @@ body {
 }
  
 </style>
-<body class='center'>
+<body>
 <div id="option">
     <input name="updateButton" 
                  type="button" 
@@ -51,6 +51,8 @@ body {
                 onclick="updateData()" />
 <h1 id="date">Howdy CUGOS</h1>
 </div>
+
+<div style="position: absolute; bottom: 0px;">Resources: <a href="https://sites.google.com/site/hispeedpackets/Home/analyticallyexactspiralscheme">evenly distributed point set</a>, <a href="http://www.esrl.noaa.gov/gmd/grad/solcalc/sunrise.html">solar caluclations</a></div>
  
 <script src="d3.v3.min.js"></script>
 <script src="topojson.v1.min.js"></script>
