--- a/solstice/index.html
+++ b/solstice/index.html
@@ -52,7 +52,7 @@ body {
 <h1 id="date">Howdy CUGOS</h1>
 </div>
 
-<div style="position: absolute; bottom: 0px;">Resources: <a href="https://sites.google.com/site/hispeedpackets/Home/analyticallyexactspiralscheme">evenly distributed point set</a>, <a href="http://www.esrl.noaa.gov/gmd/grad/solcalc/sunrise.html">solar caluclations</a></div>
+<div style="position: absolute; bottom: 0px;">Resources: <a href="https://sites.google.com/site/hispeedpackets/Home/analyticallyexactspiralscheme">evenly distributed point set</a>, <a href="http://www.esrl.noaa.gov/gmd/grad/solcalc/sunrise.html">solar calculations</a></div>
  
 <script src="d3.v3.min.js"></script>
 <script src="topojson.v1.min.js"></script>
